--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: node_js
 node_js:
-  - "6.x"
-  - "6"
-  - "6.1"
-  - "5.11"
-  - "0.6"
-
-  script: npm run test
+    - "node"
+script: npm run test
+before_script:
+  - npm install
+  - npm install gulp
