Package.json fix

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/gottsohn/inverted-index#readme",
   "dependencies": {
-    "express": "^4.14.0",
+    "express": "4.14.0",
     "jasmine": "^2.5.3"
   },
   "devDependencies": {
